# rust-i2c-nuttx

./: Kconfig  Make.defs  Makefile  README.md  run.sh  rust_i2c_main.c
rust/: Cargo.toml
rust/src/: bme280.rs  lib.rs  nuttx_hal.rs  test.rs
