# Info about this package.
[package]
authors = ["Lee Lup Yuen <luppy@appkaki.com>"]
edition = "2018"
readme  = "README.md"
name    = "app"
version = "0.0.1"

# External Rust libraries used by this module.  See crates.io.
[dependencies]
bme280             = "0.2.1"  # BME280 Driver: https://crates.io/crates/bme280
embedded-hal       = "0.2.7"  # Embedded HAL: https://crates.io/crates/embedded-hal
nuttx-embedded-hal = "1.0.5"  # Rust Embedded HAL for NuttX: https://crates.io/crates/nuttx-embedded-hal
#nuttx-embedded-hal = { path="../../../../nuttx-embedded-hal" }  # For local testing

# Build this module as a Rust library, not a Rust application.  We will link this library with the NuttX firmware.
[lib]
name       = "app"  # Output will be named `libapp.a`
test       = false
bench      = false
crate-type = ["staticlib"]

# Build settings for Development Profile
[profile.dev]
opt-level = "s"      # Optimize for size
panic     = "abort"  # Terminate the process upon panic
# lto     = true     # Enable Link Time Optimization for smaller binaries

# Optional features
[features]
default =  [  # Select the conditional compiled features
]